--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="pink-blue-grey-theme">
-  <app-navbar></app-navbar>
+  <header>
+    <app-navbar></app-navbar>
+  </header>
   <router-outlet></router-outlet>
 </div>
