--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -1,16 +1,30 @@
-<nav>
-  <mat-toolbar color="primary" class="navbar">
-    <a mat-button routerLink="/">
-      <mat-icon>home</mat-icon>
-      Bug market
-    </a>
+<mat-toolbar color="primary" class="navbar">
+  <a mat-button routerLink="/" aria-label="home">
+    <mat-icon>home</mat-icon>
+    Bug market
+  </a>
+  <nav aria-label="left navigation">
     <ul class="list list-horizontal">
-      <li *ngFor="let location of this.leftLocations">
-        <a class="navbar__item" mat-button [routerLink]="location.path" routerLinkActive="selected">
+      <li *ngFor="let location of this.leftLocations" class="link-containter">
+        <a
+          class="navbar__button"
+          mat-button
+          [routerLink]="location.path"
+          routerLinkActive="selected-button"
+        >
           {{ location.name }}
         </a>
       </li>
     </ul>
-    <span class="navbar__spacer"></span>
-  </mat-toolbar>
-</nav>
+  </nav>
+  <span class="navbar__spacer" role="none"></span>
+  <nav aria-label="right navigation">
+    <ul class="list list-horesontal">
+      <li class="link-container">
+        <a class="icon-link active" [routerLink]="this.paths.Preferences" aria-label="preferences">
+          <mat-icon routerLinkActive="selected-icon" class="icon">settings</mat-icon>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</mat-toolbar>
