--- a/src/app/app/navbar/navbar.component.scss
+++ b/src/app/app/navbar/navbar.component.scss
@@ -1,17 +1,55 @@
+$icon-shadow-selected: 2px 2px 10px rgba(black, 0.6);
+$icon-shadow-focus: 2px 2px 10px rgba(black, 0.3);
+
 .list {
   list-style: none;
+  padding-left: 0;
 }
 
 .list-horizontal {
   display: flex;
 }
 
-.navbar__spacer {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
+.navbar {
+  &__spacer {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+  }
 }
 
-.selected {
+.selected-button {
+  transition: 0.2s;
   background-color: rgba(black, 0.15);
+}
+
+.selected-icon {
+  transition: 0.2s;
+  text-shadow: $icon-shadow-selected;
+}
+
+.link-container {
+  height: 100%;
+}
+
+.icon {
+  height: 100%;
+  width: 100%;
+  font-size: 36px;
+}
+
+.icon-link {
+  display: flex;
+  align-items: center;
+
+  // disable link styles
+  color: unset;
+  text-decoration: unset;
+
+  height: 100%;
+
+  &:focus {
+    outline: none;
+    text-shadow: $icon-shadow-focus;
+  }
 }
