--- a/src/app/common/components/page-header/page-header.component.scss
+++ b/src/app/common/components/page-header/page-header.component.scss
@@ -1,5 +1,19 @@
 $inner-shadow-top: 0 8px 10px -6px rgba(black, 0.3) inset;
 
-.shadow-top {
+.component-root {
+  height: 6rem;
   box-shadow: $inner-shadow-top;
+}
+
+.header {
+  height: 100%;
+  display: flex;
+  align-items: center;
+
+  padding: 0 16px;
+
+  &__text {
+    padding: 16px;
+    font-size: 3rem;
+  }
 }
