add default styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,19 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+img {
+  max-width: 100%;
+}
+
+a {
+  color: unset;
+}
