--- a/src/app/common/components/product-card/product-card.component.scss
+++ b/src/app/common/components/product-card/product-card.component.scss
@@ -9,6 +9,7 @@ mat-card {
 $border-size: 12px;
 .card {
   border-radius: $border-size;
+  width: 100%;
 
   &__image-container {
     display: flex;
@@ -20,6 +21,7 @@ $border-size: 12px;
     border-top-right-radius: $border-size;
 
     display: block;
+    width: 100%;
     height: 100%;
     aspect-ratio: 1;
     object-fit: cover;
@@ -39,4 +41,9 @@ $border-size: 12px;
     text-overflow: ellipsis;
     text-decoration: none;
   }
+}
+
+:host {
+  // default width
+  width: 20rem;
 }
