change pixels to rems

--- a/src/app/app/navbar/navbar.component.scss
+++ b/src/app/app/navbar/navbar.component.scss
@@ -35,7 +35,7 @@ $icon-shadow-focus: 2px 2px 10px rgba(black, 0.3);
 .icon {
   height: 100%;
   width: 100%;
-  font-size: 36px;
+  font-size: 3.6rem;
 }
 
 .icon-link {
