add image placeholder

--- a/src/app/common/components/product-card/product-card.component.html
+++ b/src/app/common/components/product-card/product-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card" role="region">
   <a class="card__content" href="/">
     <div class="card__image-container">
-      <img class="card__image-content" [src]="this.imageUrl" />
+      <img class="card__image-content" src="assets/pictures/no-image.webp" />
     </div>
     <div class="card__text">
       <div class="card__price">
