--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,17 +12,18 @@ html,
 body {
   height: 100%;
 }
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
 html {
   font-size: 62.5%;
 }
 
 body {
-  font-size: 1.6rem;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+* {
+  font-size: 1.8rem;
 }
 
 img {
