--- a/src/app/pages/products/product-page.component.scss
+++ b/src/app/pages/products/product-page.component.scss
@@ -1,12 +1,11 @@
-.card-container {
-  padding: 0 min(5%, 2rem);
-  max-width: 120rem;
-  margin: 0 auto;
-}
-
 .paginator {
   max-width: fit-content;
   margin: 0 auto;
 
   background-color: transparent;
+}
+
+.page-header {
+  display: block;
+  max-width: 100vw;
 }
