--- a/src/app/pages/products/products-page.component.html
+++ b/src/app/pages/products/products-page.component.html
@@ -1,17 +1,19 @@
 <div class="component-root">
-  <common-page-header title="Products"></common-page-header>
-  <mat-paginator
-    class="paginator"
-    [length]="this.totalProducts"
-    [pageSize]="this.pageSize"
-    [pageSizeOptions]="pageSizeOptions"
-    (page)="this.onPaginationUpdate($event)"
-  >
-  </mat-paginator>
+  <common-page-header title="Products" class="page-header"></common-page-header>
+  <div class="container">
+    <mat-paginator
+      class="paginator"
+      [length]="this.totalProducts"
+      [pageSize]="this.pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      (page)="this.onPaginationUpdate($event)"
+    >
+    </mat-paginator>
 
-  <common-products-container
-    class="card-container"
-    [products]="(this.products$ | async) ?? []"
-  ></common-products-container>
+    <common-products-container
+      class="card-container"
+      [products]="(this.products$ | async) ?? []"
+    ></common-products-container>
+  </div>
   <!-- TODO: Add bottom pagination -->
 </div>
