--- a/src/app/pages/concrete-product/concrete-product.component.scss
+++ b/src/app/pages/concrete-product/concrete-product.component.scss
@@ -1,3 +1,66 @@
 .component-root {
   width: 100%;
 }
+
+.headline {
+  height: 6rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.name {
+  font-size: 3.6rem;
+}
+
+.name-sector {
+  display: flex;
+  align-items: center;
+}
+
+.price {
+  font-size: 2.4rem;
+}
+
+.publishing-info {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+  flex-direction: column;
+
+  height: 12rem;
+  &__date {
+    display: block;
+  }
+  &__author {
+    display: block;
+
+    &-description {
+      margin-right: 3rem;
+    }
+    &-link {
+      margin-right: 1.5rem;
+    }
+  }
+}
+
+p {
+  margin: 0;
+}
+
+.description {
+  max-width: 100%;
+  margin-top: 2rem;
+  &__title {
+    font-size: 2.2rem;
+  }
+  &__content {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    line-height: 3rem;
+  }
+}
+
+// for some reason tooltip not accessible without ::ng-deep
+::ng-deep .tooltip {
+  font-size: 1.6rem !important;
+}
