--- a/src/app/app/navbar/navbar.component.scss
+++ b/src/app/app/navbar/navbar.component.scss
@@ -53,3 +53,8 @@ $icon-shadow-focus: 2px 2px 10px rgba(black, 0.3);
     text-shadow: $icon-shadow-focus;
   }
 }
+
+// for some reason tooltip not accessible without ::ng-deep
+::ng-deep .tooltip {
+  font-size: 1.6rem !important;
+}
