--- a/src/app/common/components/dialogs/login-register.shared.scss
+++ b/src/app/common/components/dialogs/login-register.shared.scss
@@ -2,6 +2,14 @@
   position: relative;
 }
 
+.big-icon {
+  display: block;
+  width: 100%;
+  font-size: 25rem;
+  height: 25rem;
+  text-align: center;
+}
+
 .dialog-title {
   font-size: 2.4rem;
   text-align: center;
