--- a/src/app/common/components/dialogs/login/login-dialog.component.html
+++ b/src/app/common/components/dialogs/login/login-dialog.component.html
@@ -1,4 +1,5 @@
 <div class="component-root">
+  <mat-icon class="big-icon">account_circle</mat-icon>
   <h2 class="dialog-title" mat-dialog-title>Login</h2>
   <div class="forms-container">
     <mat-error *ngIf="requestError">{{ requestError }}</mat-error>
