--- a/src/app/common/components/dialogs/register/register-dialog.component.html
+++ b/src/app/common/components/dialogs/register/register-dialog.component.html
@@ -1,4 +1,5 @@
 <div class="component-root">
+  <mat-icon class="big-icon">account_box</mat-icon>
   <h2 class="dialog-title" mat-dialog-title>Create account</h2>
   <form class="forms-container">
     <common-username-form-field [(model)]="this.usernameField"></common-username-form-field>
