--- a/src/app/pages/preferences/preferences-page.component.html
+++ b/src/app/pages/preferences/preferences-page.component.html
@@ -1,2 +1,2 @@
-<common-page-header title="Preferences"></common-page-header>
+<common-titled-page-header title="Preferences"></common-titled-page-header>
 <main>preferences</main>
