add navbar with create product link

--- a/src/app/pages/products/products-page.component.html
+++ b/src/app/pages/products/products-page.component.html
@@ -1,5 +1,6 @@
 <div class="component-root">
-  <common-page-header title="Products" class="page-header"></common-page-header>
+  <products-navbar></products-navbar>
+
   <div class="container">
     <mat-paginator
       class="paginator"
