--- a/src/app/common/components/drag-and-drop/image/image-dad.component.html
+++ b/src/app/common/components/drag-and-drop/image/image-dad.component.html
@@ -1,1 +1,1 @@
-<file-pond #pondRef [options]="this.getFilepondConfig()"></file-pond>
+<file-pond #pondRef [options]="this.getFilepondConfig()" [files]="this.initialFiles"></file-pond>
