--- a/src/app/pages/manage-product/update-product/update-product.component.html
+++ b/src/app/pages/manage-product/update-product/update-product.component.html
@@ -1,8 +1,46 @@
-<div class="container">
-  <common-image-drag-and-drop
-    #imagesDragAndDrop
-    [initialFiles]="this.imagesSnapshot"
-    maxFileSize="5MB"
-  ></common-image-drag-and-drop>
-  <button (click)="onUpdate()" mat-raised-button color="primary">Save</button>
+<common-titled-page-header
+  *ngIf="this.loaded === false"
+  title="Loading name"
+></common-titled-page-header>
+<common-titled-page-header *ngIf="this.loaded" title="Update product"></common-titled-page-header>
+
+<mat-spinner
+  *ngIf="this.loaded === false"
+  class="loader"
+  [diameter]="this.getLoaderSpinnerDiameter()"
+></mat-spinner>
+
+<div *ngIf="this.loaded" class="container">
+  <form>
+    <common-product-name-form-field
+      [(model)]="this.productNameField"
+    ></common-product-name-form-field>
+
+    <common-product-price-form-field
+      [(model)]="this.productPriceField"
+    ></common-product-price-form-field>
+
+    <common-product-category-autocomplete
+      [(model)]="this.productCategoryField"
+    ></common-product-category-autocomplete>
+
+    <common-product-description-field
+      [(model)]="this.productDescriptionField"
+    ></common-product-description-field>
+
+    <common-image-drag-and-drop
+      #imagesDragAndDrop
+      [initialFiles]="this.imagesSnapshot"
+      maxFileSize="5MB"
+    ></common-image-drag-and-drop>
+    <button
+      (click)="onUpdate()"
+      [disabled]="this.isUpdateLocked()"
+      mat-raised-button
+      color="primary"
+      type="submit"
+    >
+      Save
+    </button>
+  </form>
 </div>
