allows router container take remain of view

--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -5,8 +5,8 @@
     <app-navbar></app-navbar>
   </header>
 
-  <common-themed-div>
-    <main class="app-content">
+  <common-themed-div class="app-content">
+    <main style="display: block; height: 100%">
       <router-outlet class="app-router"></router-outlet>
     </main>
   </common-themed-div>
