--- a/src/app/app/app.component.scss
+++ b/src/app/app/app.component.scss
@@ -1,9 +1,18 @@
+:host {
+  display: block;
+
+  max-width: 100vw;
+  height: 100vh;
+}
+
 .app-router {
-  display: none;
+  display: none !important;
 }
 
 .app-content {
   max-width: 100vw;
+
+  min-height: calc(100vh - 6.4rem);
 }
 
 .background {
