--- a/src/app/pages/products/products-page.component.html
+++ b/src/app/pages/products/products-page.component.html
@@ -1,6 +1,5 @@
-<div class="component-root">
-  <products-navbar></products-navbar>
-
+<products-navbar></products-navbar>
+<product-page-filters-sidebar>
   <div class="container">
     <mat-paginator
       class="paginator"
@@ -17,4 +16,4 @@
     ></common-products-container>
   </div>
   <!-- TODO: Add bottom pagination -->
-</div>
+</product-page-filters-sidebar>
