--- a/src/app/app/app.component.html
+++ b/src/app/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container" class="pink-blue-grey-theme">
+<div class="pink-blue-grey-theme app-container">
   <common-themed-div class="background"></common-themed-div>
 
   <header>
