--- a/src/app/app/app.component.scss
+++ b/src/app/app/app.component.scss
@@ -2,7 +2,6 @@
   display: block;
 
   max-width: 100vw;
-  height: 100vh;
 }
 
 .app-router {
@@ -16,7 +15,7 @@
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   z-index: -1;
   height: 100vh;
 }
