--- a/src/app/pages/products/filters/filters-sidebar.component.html
+++ b/src/app/pages/products/filters/filters-sidebar.component.html
@@ -1,36 +1,43 @@
 <mat-drawer-container hasBackdrop="true" class="sidebar">
-  <mat-drawer #drawer mode="over" class="sidebar__content">
-    <div class="sidenav__top">
-      <!-- Close button -->
-      <button class="sidebar__internal-toggler" mat-icon-button (click)="drawer.toggle()">
-        <mat-icon>close</mat-icon>
-      </button>
+  <mat-drawer #drawer mode="over" class="sidebar__drawer">
+    <form (submit)="submit()" class="sidebar__content">
+      <div class="sidebar__top">
+        <!-- Close button -->
+        <button
+          class="sidebar__internal-toggler"
+          mat-icon-button
+          (click)="drawer.toggle()"
+          type="button"
+        >
+          <mat-icon>close</mat-icon>
+        </button>
 
-      <common-themed-div class="sidebar__header-wrapper" color="accent">
-        <div class="sidebar__header-container">
-          <p class="sidebar__header">Filter products:</p>
-        </div>
-      </common-themed-div>
+        <common-themed-div class="sidebar__header-wrapper" color="accent">
+          <div class="sidebar__header-container">
+            <p class="sidebar__header">Filter products:</p>
+          </div>
+        </common-themed-div>
 
-      <common-product-category-autocomplete [required]="false" [(model)]="category">
-      </common-product-category-autocomplete>
+        <common-product-category-autocomplete [required]="false" [(model)]="category">
+        </common-product-category-autocomplete>
 
-      <mat-form-field class="sidebar__sorting-select" appearance="fill">
-        <mat-label>Prise sorting</mat-label>
-        <mat-select disableRipple [(value)]="priceSorting">
-          <mat-option value="NO_SORTING">No sorting</mat-option>
-          <mat-option value="ASCENDING">Ascending</mat-option>
-          <mat-option value="DESCENDING">Descending</mat-option>
-        </mat-select>
-      </mat-form-field>
+        <mat-form-field class="sidebar__sorting-select" appearance="fill">
+          <mat-label>Price</mat-label>
+          <mat-select disableRipple [(value)]="priceSorting">
+            <mat-option value="NO_SORTING">No sorting</mat-option>
+            <mat-option value="ASCENDING">Ascending</mat-option>
+            <mat-option value="DESCENDING">Descending</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-      <common-range-expander label="Price" [(model)]="this.rangeModel"></common-range-expander>
-    </div>
-    <div class="sidebar__bottom">
-      <button class="button-apply" (click)="emitApply()" mat-raised-button color="accent">
-        Apply filters
-      </button>
-    </div>
+        <common-range-expander label="Price" [(model)]="this.rangeModel"></common-range-expander>
+      </div>
+      <div class="sidebar__bottom">
+        <button class="button-apply" mat-raised-button color="accent" type="submit">
+          Apply filters
+        </button>
+      </div>
+    </form>
   </mat-drawer>
 
   <button class="sidebar__external-toggler" mat-button (click)="drawer.toggle()">
