--- a/src/app/pages/products/filters/filters-sidebar.component.scss
+++ b/src/app/pages/products/filters/filters-sidebar.component.scss
@@ -6,18 +6,21 @@
 .sidebar {
   height: 100%;
 
-  // background-color: inherit;
-
-  &__content {
+  &__drawer {
     width: min(35rem, 80%);
   }
-  &__bottom {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
+
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: column;
+
+    height: 100%;
   }
+
   &__internal-toggler {
     position: absolute;
+    z-index: 1;
     top: 0;
     right: 0;
   }
